--- a/index.html
+++ b/index.html
@@ -1,39 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Exer 14</title>
-        <script src="exer.js"></script>
-    </head>
-    <body>
-        <header></header>
-        <article>
-            <section>
-                <p>
-                    <b>
-                        Write a JavaScript function to find the first not
-                        repeated character.
-                    </b>
-                </p>
-                <p>
-                    Sample arguments : 'abacddbec'
-                    <br />
-                    Expected output : 'e'
-                </p>
-            </section>
-            <section><button onclick="run()">Run</button></section>
-            <section>
-                <p>Output Here:</p>
-                <div>
-                    <!-- TODO: Add elements here if necessary -->
-                    <input
-                        type="text"
-                        name="input_argument"
-                        id="input_argument"
-                    />
-                    <div id="output"></div>
-                </div>
-            </section>
-        </article>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Exer 14</title>
+    <script src="exer.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <!-- Main Section -->
+    <section id="main">
+      <a href=""><ion-icon class="socmed1" name="logo-facebook"></ion-icon></a>
+      <a href=""><ion-icon class="socmed2" name="logo-instagram"></ion-icon></a>
+      <a href=""><ion-icon class="socmed3" name="logo-twitter"></ion-icon></a>
+      <a href=""><ion-icon class="socmed4" name="logo-youtube"></ion-icon></a>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col"></div>
+          <div id="contentChar" class="col">
+            <h1>
+              Write a <span>JavaScript</span> function to find the first not
+              repeated character.
+            </h1>
+            <p class="lorem">
+              Sample arguments : <span>'abacddbec'</span>
+              <br />
+              Expected output : 'e'
+            </p>
+            <button class="run" onclick="run()">Run</button>
+            <input type="text" name="input_argument" id="input_argument" />
+            <h3 id="output"></h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
