--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col"></div>
+          <!-- Contents -->
           <div id="contentChar" class="col">
             <h1>
               Write a <span>JavaScript</span> function to find the first not
